<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/lighter_gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        style="@style/blueTitle">

        <TextView
            style="@style/textTitle"
            android:text="@string/personal_center"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:padding="10dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerVertical="true"
            android:background="@mipmap/default_icon"
            />

        <TextView
            android:id="@+id/name"
            style="@style/userName"
            android:layout_toRightOf="@id/image"
            android:text="@string/unknown_name"
            />

        <TextView
            style="@style/userState"
            android:layout_alignLeft="@id/name"
            android:layout_below="@id/name"
            android:text="@string/user_id_unknown"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_marginTop="15dp">

        <TextView
            style="@style/optionName"
            android:text="@string/manage_account"
            android:drawableRight="@mipmap/enter"
            />

        <View style="@style/divider"/>

        <TextView
            style="@style/optionName"
            android:text="@string/allow_cellular"
            android:drawableRight="@mipmap/enter"
            />

        <View style="@style/divider"/>

        <TextView
            style="@style/optionName"
            android:text="@string/check_new"
            android:drawableRight="@mipmap/enter"
            />

        <View style="@style/divider"/>

        <TextView
            style="@style/optionName"
            android:text="@string/binding_phone"
            android:drawableRight="@mipmap/enter"
            />

        <View style="@style/divider"/>

    </LinearLayout>

    <Button
        style="@style/optionButton"
        android:background="@color/quit"
        android:text="@string/quit"
        />

</LinearLayout>