<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        style="@style/blueTitle"
        android:layout_alignParentTop="true">

        <TextView
            style="@style/textTitle"
            android:id="@+id/title"
            android:text="@string/select_participant"/>

        <Button
            style="@style/buttonTitle"
            android:text="@string/negative"
            android:layout_alignParentLeft="true"/>

        <Button
            style="@style/buttonTitle"
            android:text="@string/confirm_gray"
            android:layout_alignParentRight="true"
            android:enabled="false"
            android:textColor="@drawable/color_text_confirm"
            />

    </RelativeLayout>


</RelativeLayout>