<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighter_gray">

    <RelativeLayout
        style="@style/blueTitle">

        <TextView
            style="@style/textTitle"
            android:text="@string/search_friend"/>

        <Button
            style="@style/buttonTitle"
            android:id="@+id/cancel"
            android:onClick="click"
            android:text="@string/negative"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        >

        <ImageView
            android:id="@+id/image_search"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:background="@mipmap/search"/>

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/image_search"
            android:background="@null"
            android:hint="@string/search_hint"
            android:textColorHint="@color/dark_gray"
            android:textColor="@color/black"
            android:singleLine="true"
            android:imeOptions="actionSearch"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />

    </RelativeLayout>


</LinearLayout>