<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.crab.doit.meetingonline.activity.LoginActivity">

    <LinearLayout
        android:id="@+id/ll_text"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sign_nickname"/>

            <EditText
                android:id="@+id/et_name"
                style="@style/inputTextNormal"
                android:layout_width="0dp"
                android:layout_weight="3"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/login_password"/>

            <EditText
                android:id="@+id/et_password"
                style="@style/inputTextPassword"
                android:layout_width="0dp"
                android:layout_weight="3"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sign_password"/>

            <EditText
                android:id="@+id/et_password_again"
                style="@style/inputTextPassword"
                android:layout_width="0dp"
                android:layout_weight="3"/>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_text"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_signUp"
            android:textColor="@color/white"
            android:layout_width="@dimen/button_not_full"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:background="@color/mainBlue"
            android:text="@string/sign"
            android:onClick="click"/>

    </LinearLayout>

</RelativeLayout>
